--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<img src="img/wick.jpg">
 	<h1>John Wick</h1>
 </header>
-<!--  main element -->
+<!--  Kirjeldus -->
 <main>
 	<h2>About John</h2>
 	<p>After John Wick loses his wife Helen to a terminal illness, he receives a beagle puppy named Daisy from her to help him cope with his grief. Despite John's stoic demeanor, he bonds with the puppy and they spend their day driving around in his vintage 1969 Ford Mustang Mach 1. At a gas station, he encounters a trio of Russian gangsters whose leader Iosef insists on buying his car, but John repeatedly states that it is not for sale. Frustrated, the mobsters follow John to his home, knock him unconscious, steal his car, and kill Daisy.</p>
