Html & css for hero site

--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
 	<title>John Wick</title>
 	<link rel="icon" href="img/wick.jpg">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 <!-- siin on pealkirja element ja pilt -->
 <header>
 	<img src="img/wick.jpg">
 	<h1>John Wick</h1>
+
 </header>
 <!--  Kirjeldus -->
 <main>
 	<h2>About John</h2>
 	<p>After John Wick loses his wife Helen to a terminal illness, he receives a beagle puppy named Daisy from her to help him cope with his grief. Despite John's stoic demeanor, he bonds with the puppy and they spend their day driving around in his vintage 1969 Ford Mustang Mach 1. At a gas station, he encounters a trio of Russian gangsters whose leader Iosef insists on buying his car, but John repeatedly states that it is not for sale. Frustrated, the mobsters follow John to his home, knock him unconscious, steal his car, and kill Daisy.</p>
 	<img src="img/puppy.jpg">
-	<p>John with his beloved puppy before all the horrible things happened.</p>
+	<p class="caption">John with his beloved puppy before all the horrible things happened.</p>
 
 
 	<!-- Characteristics -->
@@ -30,9 +32,9 @@
 	<!-- Friends -->
 
 	<h2>Allies</h2>
-	<p>He has some help on the way from people of ambiguous backrounds helping him on his merry way.<br> It's safe to say that he has the 
-	most wonderful relationships with dogs. Other than that it could be said <br> that he's quite fond of guns and hand to hand combat. With people 
-on the other hand, he seems to stay <br>quite distant for the most part.
+	<p>He has some help on the way from people of ambiguous backrounds helping him on his merry way. It's safe to say that he has the 
+	most wonderful relationships with dogs. Other than that it could be said that he's quite fond of guns and hand to hand combat. <br>With people 
+on the other hand, he seems to stay quite distant for most part.
 <br>
 <br>
 The links below will provide you with some additional information.
