--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 <head>
 	<title>John Wick</title>
 	<link rel="icon" href="img/wick.jpg">
