--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>John Wick</title>
 	<link rel="icon" href="img/wick.jpg">
-	<link rel="stylesheet" type="text/css" href="css/hero.css">
+	<link rel="stylesheet" type="text/css" href="css/heros.css">
 </head>
 <body>
 <!-- siin on pealkirja element ja pilt -->
