--- a/index-without-css.html
+++ b/index-without-css.html
@@ -4,7 +4,8 @@
 <head>
 	<title>John Wick</title>
 	<link rel="icon" href="img/wick.jpg">
-	
+<!-- lol  no css because we want to see it on mobile
+-->
 </head>
 <body>
 <!-- siin on pealkirja element ja pilt -->
@@ -52,7 +53,7 @@ The links below will provide you with some additional information.
 <!-- footer element -->
 <footer>
 	<p>This site was created during a <a target="_blank"href="https://taptapkaboom.com">Tap Tap Kaboom</a> class. &copy;
-		Loopy
+		Loopytoehold
 	</p>
 </footer>
 
